--- a/00-logic_neuron_programming.ipynb
+++ b/00-logic_neuron_programming.ipynb
@@ -3,7 +3,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "oFeyzRGiZMnS"
+        "id": "N-jW7j6LsWpB"
       },
       "source": [
         "# Code your own neuron and neural net\n",
@@ -18,10 +18,10 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 9,
       "metadata": {
         "lines_to_next_cell": 1,
-        "id": "T8oIAavdZMnU"
+        "id": "lhnpE1RIsWpF"
       },
       "outputs": [],
       "source": [
@@ -32,9 +32,9 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 10,
       "metadata": {
-        "id": "AcQuTOwLZMnV"
+        "id": "x-azFSO9sWpH"
       },
       "outputs": [],
       "source": [
@@ -44,17 +44,15 @@
         "    return a list c, same length as a, element c[i] = a[i] * b[i]\n",
         "    \"len(list)\" and \"[0] * n\" may be useful\n",
         "    \"\"\"\n",
-        "\n",
-        "    c = [0]*len(a)\n",
-        "\n",
         "    c = [a[i]*b[i] for i in range(len(a))]\n",
+        "\n",
         "    return c"
       ]
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "qHtJkJPUZMnW"
+        "id": "naqIFfhBsWpH"
       },
       "source": [
         "---"
@@ -62,10 +60,10 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 11,
       "metadata": {
-        "id": "NnYzxAbKZMnW",
-        "outputId": "0855c8bb-1180-4f85-b4dd-d1294d649b88",
+        "id": "yjH-UY70sWpI",
+        "outputId": "a477b171-37b0-4221-a522-24442ae60aae",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -79,7 +77,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 8
+          "execution_count": 11
         }
       ],
       "source": [
@@ -89,10 +87,10 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 12,
       "metadata": {
         "lines_to_next_cell": 1,
-        "id": "pGEKvgmuZMnX"
+        "id": "uSNCXdi5sWpI"
       },
       "outputs": [],
       "source": [
@@ -102,9 +100,9 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 15,
       "metadata": {
-        "id": "y8e1T0PAZMnX"
+        "id": "eGQByB42sWpI"
       },
       "outputs": [],
       "source": [
@@ -114,25 +112,33 @@
         "    return a scalar value representing a scalar neuron\n",
         "    \"sum(list)\" computes the sum of the elements in a list\n",
         "    \"\"\"\n",
-        "    pass  # ⬅️✏️"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "xNgR8-bCZMnX"
-      },
-      "source": [
-        "---"
+        "    neuron = mul(x,weights)\n",
+        "\n",
+        "    return sum(neuron) + bias"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 16,
       "metadata": {
-        "id": "EEfplEK8ZMnY"
+        "id": "oAb5Q6UEsWpJ",
+        "outputId": "877b691d-6029-4224-a5fd-4bb5c09c5185",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "10"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 16
+        }
+      ],
       "source": [
         "# Test linear_neuron() function\n",
         "linear_neuron(my_x, my_w, my_b)"
@@ -140,10 +146,10 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 17,
       "metadata": {
         "lines_to_next_cell": 1,
-        "id": "snas_ZI2ZMnY"
+        "id": "y2FcZNeKsWpJ"
       },
       "outputs": [],
       "source": [
@@ -155,7 +161,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "3HB5mUS8ZMnY"
+        "id": "JXPWvndxsWpJ"
       },
       "outputs": [],
       "source": [
@@ -170,7 +176,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "fan4MFneZMnZ"
+        "id": "rLmsaWDGsWpK"
       },
       "source": [
         "---"
@@ -180,7 +186,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "cZmUFGmAZMnZ"
+        "id": "L9G57kEusWpK"
       },
       "outputs": [],
       "source": [
@@ -192,7 +198,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "D5Zvl2utZMna"
+        "id": "KAG6sWWfsWpK"
       },
       "outputs": [],
       "source": [
@@ -206,7 +212,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "mtTosdPrZMnb"
+        "id": "ZEu0-HFDsWpL"
       },
       "outputs": [],
       "source": [
@@ -223,7 +229,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "rY5hiRTzZMnb"
+        "id": "IO53eEQssWpL"
       },
       "outputs": [],
       "source": [
@@ -238,7 +244,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "FTtxYfYwZMnc"
+        "id": "4JOe3vtZsWpL"
       },
       "source": [
         "---"
@@ -248,7 +254,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "0kkKAOgoZMnc"
+        "id": "aa88rASmsWpM"
       },
       "outputs": [],
       "source": [
@@ -261,7 +267,7 @@
       "execution_count": null,
       "metadata": {
         "lines_to_next_cell": 1,
-        "id": "6QjzOcfWZMnd"
+        "id": "4EkfmRrIsWpM"
       },
       "outputs": [],
       "source": [
@@ -276,7 +282,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "lwPYb_OrZMnd"
+        "id": "j2kP3M_asWpM"
       },
       "source": [
         "---"
@@ -286,7 +292,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "bTETaGoQZMnd"
+        "id": "RgGZhNKvsWpM"
       },
       "outputs": [],
       "source": [
@@ -304,7 +310,7 @@
       "execution_count": null,
       "metadata": {
         "lines_to_next_cell": 1,
-        "id": "KXIdh7jxZMne"
+        "id": "cyYh3aqxsWpN"
       },
       "outputs": [],
       "source": [
@@ -318,7 +324,7 @@
       "execution_count": null,
       "metadata": {
         "lines_to_next_cell": 1,
-        "id": "KKi7s-u9ZMne"
+        "id": "-3uI9iFgsWpN"
       },
       "outputs": [],
       "source": [
@@ -333,7 +339,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "65rr3A62ZMne"
+        "id": "MHUweO7-sWpO"
       },
       "source": [
         "---"
@@ -344,7 +350,7 @@
       "execution_count": null,
       "metadata": {
         "lines_to_next_cell": 1,
-        "id": "olWJ74KhZMne"
+        "id": "cE2GmOYbsWpO"
       },
       "outputs": [],
       "source": [
@@ -358,7 +364,7 @@
       "execution_count": null,
       "metadata": {
         "lines_to_next_cell": 1,
-        "id": "ddgRhRVFZMnf"
+        "id": "0c0jRmtYsWpO"
       },
       "outputs": [],
       "source": [
@@ -373,7 +379,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "g1DWGc0_ZMnf"
+        "id": "1IYtK8O2sWpO"
       },
       "source": [
         "---"
@@ -384,7 +390,7 @@
       "execution_count": null,
       "metadata": {
         "lines_to_next_cell": 1,
-        "id": "AnJDt573ZMnf"
+        "id": "ch8XWzR3sWpP"
       },
       "outputs": [],
       "source": [
@@ -396,7 +402,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "G29tFiaHZMnf"
+        "id": "ClSGAOd4sWpP"
       },
       "source": [
         "![X-OR](https://github.com/Atcold/NYU-DLSP20/blob/master/res/x-or_circuit.png?raw=1)"
@@ -406,7 +412,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "qXj_agGDZMnf"
+        "id": "yzHiH4NrsWpP"
       },
       "outputs": [],
       "source": [
@@ -421,7 +427,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "8_CT0ldvZMng"
+        "id": "BMZ2D1MUsWpP"
       },
       "source": [
         "---"
@@ -431,7 +437,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "lAiQUG-EZMng"
+        "id": "sO6LrlMLsWpQ"
       },
       "outputs": [],
       "source": [
@@ -443,7 +449,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "zQGTcB9-ZMng"
+        "id": "AXkCuDltsWpR"
       },
       "source": [
         "![Half-adder](https://github.com/Atcold/NYU-DLSP20/blob/master/res/half-adder_circuit.png?raw=1)"
@@ -453,7 +459,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "YicUTlrFZMng"
+        "id": "WokEQuW9sWpS"
       },
       "outputs": [],
       "source": [
@@ -464,7 +470,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "DYKWCx5QZMng"
+        "id": "HcENBBVWsWpT"
       },
       "source": [
         "---"
@@ -473,7 +479,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "dkEkvJfeZMnh"
+        "id": "sK4fehOVsWpT"
       },
       "source": [
         "![Adder](https://github.com/Atcold/NYU-DLSP20/blob/master/res/adder_circuit.png?raw=1)"
@@ -483,7 +489,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "DFy8vjf3ZMnh"
+        "id": "-Y5_eWe7sWpU"
       },
       "outputs": [],
       "source": [
@@ -494,7 +500,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "Vx_WttgNZMnh"
+        "id": "pIMmU2O8sWpU"
       },
       "source": [
         "---"
