--- a/00-logic_neuron_programming.ipynb
+++ b/00-logic_neuron_programming.ipynb
@@ -572,7 +572,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 39,
       "metadata": {
         "id": "WokEQuW9sWpS"
       },
@@ -582,16 +582,13 @@
         "\n",
         "def half_adder(x):\n",
         "    \"\"\"\n",
-        "    Return x1_ * x2 + x1 * x2_\n",
+        "    Return x1 xor x2, x1*x2\n",
         "    \"\"\"\n",
         "    x1, x2 = x\n",
-        "    x1_ = not_neuron([x1])\n",
-        "    x2_ = not_neuron([x2])\n",
+        "    s = xor_neuron([x1,x2])\n",
+        "    cout = and_neuron([x1,x2])\n",
         "\n",
-        "    x1_x2 = and_neuron([x1_,x2])\n",
-        "    x1x2_ = and_neuron([x1,x2_])\n",
-        "\n",
-        "    return or_neuron([x1_x2,x1x2_])"
+        "    return [s,cout]"
       ]
     },
     {
@@ -601,6 +598,35 @@
       },
       "source": [
         "---"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print('Checking Half Adder neuron output')\n",
+        "for my_x in my_x_collection:\n",
+        "    print(my_x, f'{half_adder(my_x)[0]:.3f}', f'{half_adder(my_x)[1]:.3f}')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "XsNWbr_FwO6g",
+        "outputId": "fda5d1b9-75f7-428f-9ee6-b92267ec820d"
+      },
+      "execution_count": 44,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Checking Half Adder neuron output\n",
+            "[0, 0] 0.008 0.000\n",
+            "[0, 1] 0.993 0.007\n",
+            "[1, 0] 0.993 0.007\n",
+            "[1, 1] 0.008 0.993\n"
+          ]
+        }
       ]
     },
     {
@@ -614,14 +640,79 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 45,
       "metadata": {
         "id": "-Y5_eWe7sWpU"
       },
       "outputs": [],
       "source": [
         "# Combine two half-adders and an OR into a (full) adder\n",
-        "# ⬅️✏️"
+        "\n",
+        "def full_adder(x):\n",
+        "    \"\"\"\n",
+        "    Return x1 xor x2, x1*x2\n",
+        "    \"\"\"\n",
+        "    x1, x2, cin = x\n",
+        "\n",
+        "    s1, c1 = half_adder([x1,x2])\n",
+        "\n",
+        "    s, c2 = half_adder([s1, cin])\n",
+        "\n",
+        "    return [s,or_neuron([c1, c2])]"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Defina a collection of inputs to test OR and AND\n",
+        "my_x_collection2 = [\n",
+        "    [0, 0, 0 ],\n",
+        "    [0, 0, 1 ],\n",
+        "    [0, 1, 0 ],\n",
+        "    [0, 1, 1 ],\n",
+        "    [1, 0, 0 ],\n",
+        "    [1, 0, 1 ],\n",
+        "    [1, 1, 0 ],\n",
+        "    [1, 1, 1 ],\n",
+        "]"
+      ],
+      "metadata": {
+        "id": "S054NDZnyuW6"
+      },
+      "execution_count": 48,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print('Checking Full Adder neuron output')\n",
+        "for my_x in my_x_collection2:\n",
+        "    print(my_x, f'{full_adder(my_x)[0]:.3f}', f'{full_adder(my_x)[1]:.3f}')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ZdVtgLz5yko_",
+        "outputId": "904f8a4a-18c9-4aa9-d44a-6f4c964bbd16"
+      },
+      "execution_count": 49,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Checking Full Adder neuron output\n",
+            "[0, 0, 0] 0.008 0.007\n",
+            "[0, 0, 1] 0.993 0.007\n",
+            "[0, 1, 0] 0.993 0.008\n",
+            "[0, 1, 1] 0.008 0.993\n",
+            "[1, 0, 0] 0.993 0.008\n",
+            "[1, 0, 1] 0.008 0.993\n",
+            "[1, 1, 0] 0.008 0.993\n",
+            "[1, 1, 1] 0.993 0.993\n"
+          ]
+        }
       ]
     },
     {
